--- a/eStore/eStore.csproj
+++ b/eStore/eStore.csproj
@@ -36,4 +36,8 @@
     <None Remove="E:\FPTU\PhongNT-FPTU-Learning-Resources\2021_Semester5_SUMMER\PRN211\Code Project\Assignments\Assignment03_eStore\.editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
