--- a/eStore/appsettings.json
+++ b/eStore/appsettings.json
@@ -16,7 +16,7 @@
   "ConnectionStrings": {
 
 
-    "SalesManagement": "server=(local);database=FStore;uid=sa;pwd=123456;TrustServerCertificate=True"
+    "SalesManagement": "server=(local);database=FStore;uid=sa;pwd=12345678;TrustServerCertificate=True"
 
   }
 }
